# jina-server

./: Dockerfile  Dockerfile.nvidia  README.md  docker-compose.cpu.yml  docker-compose.nvidia.yml  pyproject.toml  uvicorn_log_config.yaml
src/jina_server/: serve.py
src/jina_server/templates/: index.html
