[project]
name = "jina-server"
version = "0.1.0"
description = "A FastAPI server for Jina AI models"
readme = "README.md"
authors = [
    { name = "Maurice-Pascal Sonnemann", email = "mpsonnemann@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.7.0",
    "einops>=0.8.1",
    "fastapi>=0.115.12",
    "transformers>=4.52.3",
    "uvicorn[standard]>=0.34.2",
]

[project.scripts]
#jina-server = "jina_server.serve"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
