[project]
name = "jina-server"
version = "0.1.0"
description = "A FastAPI server for Jina AI models"
readme = "README.md"
authors = [
    { name = "Maurice-Pascal Sonnemann", email = "mpsonnemann@gmail.com" }
]
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.12",
    "einops>=0.8.1",
    "uvicorn[standard]>=0.34.2",
]

[tool.uv]
conflicts = [[{ extra = "cpu" }, { extra = "cuda" }]]

[project.optional-dependencies]
cpu = [ 
    "torch>=2.6.0",
    "transformers>=4.52.3"
]
cuda = [
    "torch>=2.6.0",
    "transformers>=4.52.3",
    "nvidia-cudnn-cu12>=9.5.1.17",
    "nvidia-cusparse-cu12>=12.5.4.2",
    "nvidia-cusparselt-cu12>=0.6.3",
    "nvidia-cublas-cu12>=12.6.4.1",
    "nvidia-cuda-cupti-cu12>=12.6.80",
    "nvidia-cuda-nvrtc-cu12>=12.6.77",
    "nvidia-cuda-runtime-cu12>=12.6.77",
    "nvidia-cufft-cu12>=11.3.0.4",
    "nvidia-curand-cu12>=10.3.7.77",
    "nvidia-cusolver-cu12>=11.7.1.2",
    "nvidia-nccl-cu12>=2.21.5",
    "nvidia-nvjitlink-cu12>=12.6.85",
    "nvidia-nvtx-cu12>=12.6.77"
]

[tool.uv.sources]
torch = [
    { index = "pytorch-cpu", extra = "cpu" },
    { index = "pytorch-cuda", extra = "cuda" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu126"

[project.scripts]
serve = "jina_server.serve:main_serve"
download-model = "jina_server.serve:main_download_model"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
cuda = [
    "nvidia-cudnn-cu12>=9.5.1.17",
]
